# fugo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
fugo/: __init__.py  chord.py  duration.py  interval.py  key.py  meter.py  motion.py  note.py  time.py
fugo/chord/: chord.py
fugo/interval/: __init__.py  internals.py  interval.py
fugo/note/: __init__.py  internals.py  note.py  note_name.py
tests/: test_chord.py  test_duration.py  test_interval.py  test_key.py  test_meter.py  test_motion.py  test_note.py  test_note_name.py  test_time.py
