[project]
name = "fugo"
version = "0.0.4"
description = "Counterpoint for Python"
readme = "README.md"
requires-python = "~=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "Ujan RoyBandyopadhyay", email = "ujan.roybandyopadhyay@gmail.com"}
]
keywords = ["music", "midi", "counterpoint"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed"
]

[project.urls]
Source = "https://github.com/ujan-r/fugo"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["fugo"]
